 * VM
   - Callable EVAL.
   - Macroses.
   - Own tokenizer.
   - Use SYMBOL for storing FUNC name.
 * GP
   - Static types.
     + Generate ADF.
     + Mutate ADF.
     + Crossover ADF.
   - Program optimization.
   - Multithread examine.
   - Add scripting for individual testing and comparsion.

Now
 - Support for win32.
 * VM
   - Fix function calls with ERROR arguments.

Version 0.0.3 2011-12-04
 - Use own interpreter for config.
 - Remove Guile dependencies.
 * VM
   - Support for LIST in ADF definition.
   - Support for redefinition symbols.
   - Automatic symbol definition.
   - Fix work with signed INTEGER.
 * GP
   - Start to define types.

Version 0.0.2 2011-01-31
 * VM
   - Throw on wrong function number at minimization.
   - Closure support.
   - Use symbols map for convert from string to Object.
   - Add SYMBOL and MACRO object's types.
   - Symbol support.
 * GP
   - Change generation of new population.
   - Remove mutations from crossover.
   - Stop on non-move answer.

Version 0.0.1 2011-01-04
 * Remove GTKmm dependencies.
 * Use GNU Guile for scripting and config.
 * Move VM into library.
 * Catch Scheme exceptions.
 * Load options from Scheme file.
 * Remove GP test and load other options.
 * Append --enable-gprof and --enable-debug options.

Version 0.0.0.10 2011-01-02
 * Remove Ruby support.
 * Dump full population at the end.
 * Make ST_ANSWER_QUALITY, ST_MOVE_DIFF, ST_DIR_DIFF as aggregative.
 * Fix overflow in aggregation.
 * Append ST_DIRS parameter.
 * Append ST_AREA parameter.
 * Print world map.

Version 0.0.0.9 2010-12-30
 * Remove check for equality in mutation and crossover because it can break good ADF.
 * Fix DIR_DIFF status calculating.
 * Fix evalation at end of circles.
 * Use elitism and tournament selection.
 * Change move format from "( CODE DIRECTION )" to "( CODE . DIRECTION )"
 * Remove ST_STATIC_CHECK.
 * Move run status into CurrentState.
 * Shutdown Environment::Eval loop.
 * Set maximum number of steps.